# HarmonEyesTheia

./: .gitattributes  .gitignore  MANIFEST.in  README.md  pyproject.toml
examples/: scene_camera.json  theia-ganzin-streaming.py  theia-pupil-labs-batch.py  theia-pupil-labs-streaming.py  theia-tobii-g3.py  theia-webcam-streaming.py
harmoneyes_theia/: __init__.py
harmoneyes_theia/_bin/: README.md  build-manifest.json  theia-webcam-linux-x86_64  theia-webcam-macos-arm64
