[project]
name = "harmoneyes-theia"
version = "1.0.0"
description = "HarmonEyes Theia SDK - Eye tracking, cognitive load, and sleepiness detection"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "RightEye LLC / HarmonEyes", email = "support@harmoneyes.com"}
]
keywords = ["eye-tracking", "cognitive-load", "drowsiness", "pupil-labs", "ganzin"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/RightEyeLLC/HarmonEyesTheia"
Repository = "https://github.com/RightEyeLLC/HarmonEyesTheia"
Documentation = "https://github.com/RightEyeLLC/HarmonEyesTheia#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harmoneyes_theia"]

[tool.hatch.build.targets.wheel.force-include]
# Ensure binary files are included in the wheel
"harmoneyes_theia/_bin/" = "harmoneyes_theia/_bin/"
